--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/ConsultService.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/ConsultService.fxml
@@ -3,21 +3,21 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ConsultServiceController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="741.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ConsultServiceController">
    <children>
-      <TextField fx:id="keywords" layoutX="46.0" layoutY="27.0" prefHeight="24.0" prefWidth="508.0" promptText="Mots-clé de la recherche" />
-      <DatePicker fx:id="begin" layoutX="46.0" layoutY="70.0" prefHeight="24.0" prefWidth="144.0" promptText="Date de début" />
-      <Slider fx:id="radius" blockIncrement="5.0" layoutX="364.0" layoutY="79.0" max="150.0" prefHeight="38.0" prefWidth="172.0" showTickLabels="true" showTickMarks="true" value="15.0" />
-      <DatePicker fx:id="end" layoutX="204.0" layoutY="70.0" prefHeight="24.0" prefWidth="144.0" promptText="Date de fin" />
-      <Label layoutX="364.0" layoutY="62.0" text="Rayon autour de moi (km)" />
-      <Button fx:id="ButtonSearch" layoutX="222.0" layoutY="117.0" mnemonicParsing="false" onAction="#handleSearch" text="Lancer la recherche !" />
-      <ListView fx:id="results" layoutX="46.0" layoutY="160.0" prefHeight="180.0" prefWidth="508.0" />
-      <Button fx:id="ButtonReset" layoutX="97.0" layoutY="362.0" mnemonicParsing="false" onAction="#handleReset" text="Réinitialiser les résultats" />
-      <Button fx:id="ButtonCancel" layoutX="430.0" layoutY="362.0" mnemonicParsing="false" onAction="#cancel" text="Retour" />
+      <TextField fx:id="keywords" layoutX="115.0" layoutY="21.0" prefHeight="24.0" prefWidth="508.0" promptText="Mots-clé de la recherche" />
+      <DatePicker fx:id="begin" layoutX="115.0" layoutY="64.0" prefHeight="24.0" prefWidth="144.0" promptText="Date de début" />
+      <Slider fx:id="radius" blockIncrement="5.0" layoutX="433.0" layoutY="73.0" max="150.0" prefHeight="38.0" prefWidth="172.0" showTickLabels="true" showTickMarks="true" value="15.0" />
+      <DatePicker fx:id="end" layoutX="273.0" layoutY="64.0" prefHeight="24.0" prefWidth="144.0" promptText="Date de fin" />
+      <Label layoutX="433.0" layoutY="56.0" text="Rayon autour de moi (km)" />
+      <Button fx:id="ButtonSearch" layoutX="291.0" layoutY="111.0" mnemonicParsing="false" onAction="#handleSearch" text="Lancer la recherche !" />
+      <TableView fx:id="results" layoutX="14.0" layoutY="150.0" prefHeight="318.0" prefWidth="714.0" />
+      <Button fx:id="ButtonReset" layoutX="172.0" layoutY="484.0" mnemonicParsing="false" onAction="#handleReset" text="Réinitialiser les résultats" />
+      <Button fx:id="ButtonCancel" layoutX="505.0" layoutY="484.0" mnemonicParsing="false" onAction="#cancel" text="Retour" />
    </children>
 </AnchorPane>
