--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/ConsultEquipment.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/ConsultEquipment.fxml
@@ -3,12 +3,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ConsultEquipmentController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ConsultEquipmentController">
    <children>
       <TextField fx:id="keywords" layoutX="46.0" layoutY="27.0" prefHeight="24.0" prefWidth="508.0" promptText="Mots-clé de la recherche" />
       <DatePicker fx:id="begin" layoutX="46.0" layoutY="70.0" prefHeight="24.0" prefWidth="144.0" promptText="Date de début" />
@@ -16,7 +16,7 @@
       <DatePicker fx:id="end" layoutX="204.0" layoutY="70.0" prefHeight="24.0" prefWidth="144.0" promptText="Date de fin" />
       <Label layoutX="364.0" layoutY="62.0" text="Rayon autour de moi (km)" />
       <Button fx:id="ButtonSearch" layoutX="222.0" layoutY="117.0" mnemonicParsing="false" onAction="#handleSearch" text="Lancer la recherche !" />
-      <ListView fx:id="results" layoutX="46.0" layoutY="160.0" prefHeight="180.0" prefWidth="508.0" />
+      <TableView fx:id="results" layoutX="14.0" layoutY="150.0" prefHeight="202.0" prefWidth="570.0" />
       <Button fx:id="ButtonReset" layoutX="115.0" layoutY="362.0" mnemonicParsing="false" onAction="#handleReset" text="Réinitialiser les résultats" />
       <Button fx:id="ButtonCancel" layoutX="419.0" layoutY="362.0" mnemonicParsing="false" onAction="#cancel" text="Retour" />
    </children>
