--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Profile.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Profile.fxml
@@ -10,13 +10,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox fx:id="ProfileContent" prefHeight="236.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ProfileController">
+<VBox fx:id="ProfileContent" prefHeight="236.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ProfileController">
    <children>
       <HBox alignment="CENTER" prefHeight="73.0" prefWidth="177.0" spacing="20.0">
          <children>
             <VBox fx:id="vbox_pp" alignment="TOP_CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="100.0" style="-fx-border-color: black; -fx-border-width: 2; -fx-border-radius: 50;">
                <children>
-                  <ImageView fx:id="photoProfil" fitHeight="102.0" fitWidth="103.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="photoProfil" fitHeight="102.0" fitWidth="103.0" onMouseClicked="#handlePrivateProfile" pickOnBounds="true" preserveRatio="true">
                      <viewport>
                         <Rectangle2D />
                      </viewport></ImageView>
