--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/HomePage.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/HomePage.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -36,12 +35,7 @@
                         <Font name="Ubuntu" size="18.0" />
                      </font>
                   </Text>
-                  <TableView fx:id="latest_offers" prefHeight="200.0" prefWidth="200.0">
-                    <columns>
-                      <TableColumn prefWidth="75.0" text="C1" />
-                      <TableColumn prefWidth="75.0" text="C2" />
-                    </columns>
-                  </TableView>
+                  <TableView fx:id="latest_offers" prefHeight="200.0" prefWidth="200.0" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
