--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Planning.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Planning.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
+<?import com.calendarfx.view.CalendarView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="681.0" prefWidth="983.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.PlanningController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="681.0" prefWidth="983.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.PlanningController">
    <top>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Mon planning:" BorderPane.alignment="CENTER">
          <font>
@@ -18,13 +18,6 @@
       </Text>
    </top>
    <center>
-      <VBox fx:id="planningContain" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-border-color: black; -fx-border-width: 3; -fx-border-radius: 30;" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
-         </BorderPane.margin>
-         <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Ouah le beau planning, c'est fou!" />
-         </children>
-      </VBox>
+      <CalendarView fx:id="planningCalendar" BorderPane.alignment="CENTER"/>
    </center>
 </BorderPane>
