--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Messagerie.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Messagerie.fxml
@@ -29,7 +29,25 @@
         <items>
           <AnchorPane fx:id="listConversation" minHeight="0.0" minWidth="0.0" prefHeight="518.0" prefWidth="365.0">
                <children>
-                  <VBox layoutX="2.0" prefHeight="590.0" prefWidth="283.0" spacing="20.0">
+                  <VBox fx:id="creationConversation" prefHeight="83.0" prefWidth="289.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Créer une nouvelle conversation:">
+                           <font>
+                              <Font name="Ubuntu" size="18.0" />
+                           </font>
+                        </Text>
+                        <HBox alignment="CENTER" prefHeight="40.0" prefWidth="266.0">
+                           <children>
+                              <TextField fx:id="pseudoContact" promptText="Entrez l'utilisateur" />
+                              <Button fx:id="createConvButton" mnemonicParsing="false" onAction="#handleCreateConversation" text="Créer" />
+                           </children>
+                        </HBox>
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </VBox>
+                  <VBox layoutY="84.0" prefHeight="506.0" prefWidth="285.0" spacing="20.0">
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Listes de vos conversations:">
                            <font>
@@ -58,7 +76,7 @@
                         </Text>
                         <HBox prefHeight="38.0" prefWidth="626.0">
                            <children>
-                              <Label prefHeight="40.0" prefWidth="176.0" text="Nom du contact">
+                              <Label fx:id="contactPseudoLabel" prefHeight="40.0" prefWidth="176.0" text="Nom du contact">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
