--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Planning.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Planning.fxml
@@ -2,20 +2,20 @@
 <?import com.calendarfx.view.CalendarView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.control.Button?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="681.0" prefWidth="983.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.PlanningController">
    <top>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Mon planning:" BorderPane.alignment="CENTER">
-         <font>
-            <Font name="Ubuntu" size="24.0" />
-         </font>
-         <BorderPane.margin>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-         </BorderPane.margin>
-      </Text>
+      <HBox spacing="10" alignment="CENTER">
+         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Mon planning:">
+            <font>
+               <Font name="Ubuntu" size="24.0" />
+            </font>
+         </Text>
+      </HBox>
    </top>
    <center>
       <CalendarView fx:id="planningCalendar" BorderPane.alignment="CENTER"/>
