--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/ServiceOffer.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/ServiceOffer.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="599.0" prefWidth="833.0" spacing="10.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" prefHeight="599.0" prefWidth="833.0" spacing="10.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ServiceOfferController">
    <children>
       <Label fx:id="title" text="Service proposé">
          <font>
