--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/EquipmentOffer.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/EquipmentOffer.fxml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.EquipmentOfferController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.EquipmentOfferController">
    <children>
       <Label fx:id="title" layoutX="245.0" layoutY="33.0" text="Matériel proposé" />
       <Label fx:id="description" layoutX="263.0" layoutY="67.0" text="Description" />
       <Label fx:id="quantity" layoutX="272.0" layoutY="107.0" text="Quantité" />
       <Label fx:id="dates" layoutX="226.0" layoutY="145.0" text="Dates de début / de fin" textAlignment="CENTER" />
       <Label fx:id="price" layoutX="249.0" layoutY="181.0" text="Coût en florains" textAlignment="CENTER" />
-      <Button fx:id="book" layoutX="77.0" layoutY="254.0" mnemonicParsing="false" onAction="#handleBook" text="Réserver l'offre" />
-      <Button layoutX="212.0" layoutY="254.0" mnemonicParsing="false" text="Contacter le propriétaire" />
-      <Button fx:id="ButtonCancel" layoutX="407.0" layoutY="254.0" mnemonicParsing="false" onAction="#cancel" text="Liste des offres" />
+      <Button fx:id="book" layoutX="76.0" layoutY="307.0" mnemonicParsing="false" onAction="#handleBook" text="Réserver l'offre" />
+      <Button layoutX="211.0" layoutY="307.0" mnemonicParsing="false" text="Contacter le propriétaire" />
+      <Button fx:id="ButtonCancel" layoutX="406.0" layoutY="307.0" mnemonicParsing="false" onAction="#cancel" text="Liste des offres" />
+      <DatePicker fx:id="booking_begin" layoutX="35.0" layoutY="223.0" prefHeight="24.0" prefWidth="241.0" promptText="Date de début de réservation" />
+      <DatePicker fx:id="booking_end" layoutX="326.0" layoutY="223.0" prefHeight="24.0" prefWidth="241.0" promptText="Date de fin de réservation" />
    </children>
 </AnchorPane>
