--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/ServiceOffer.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/ServiceOffer.fxml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ServiceOfferController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ServiceOfferController">
    <children>
       <Label fx:id="title" layoutX="245.0" layoutY="33.0" text="Service proposé" />
       <Label fx:id="description" layoutX="263.0" layoutY="67.0" text="Description" />
       <Label fx:id="date" layoutX="255.0" layoutY="107.0" text="Date et heure" />
       <Label fx:id="recurrency" layoutX="196.0" layoutY="145.0" text="Récurrence ? Si oui, fréquence ?" textAlignment="CENTER" />
       <Label fx:id="price" layoutX="249.0" layoutY="181.0" text="Coût en florains" textAlignment="CENTER" />
-      <Button fx:id="ButtonBook" layoutX="77.0" layoutY="254.0" mnemonicParsing="false" onAction = "#handleBook" text="Réserver l'offre" />
-      <Button layoutX="212.0" layoutY="254.0" mnemonicParsing="false" text="Contacter le propriétaire" />
-      <Button fx:id="ButtonCancel" layoutX="407.0" layoutY="254.0" mnemonicParsing="false" onAction="#cancel" text="Liste des offres" />
+      <Button fx:id="ButtonBook" layoutX="74.0" layoutY="324.0" mnemonicParsing="false" onAction="#handleBook" text="Réserver l'offre" />
+      <Button layoutX="209.0" layoutY="324.0" mnemonicParsing="false" text="Contacter le propriétaire" />
+      <Button fx:id="ButtonCancel" layoutX="404.0" layoutY="324.0" mnemonicParsing="false" onAction="#cancel" text="Liste des offres" />
+      <DatePicker fx:id="booking_begin" layoutX="29.0" layoutY="240.0" prefHeight="24.0" prefWidth="241.0" promptText="Date de début de réservation" />
+      <DatePicker fx:id="booking_end" layoutX="320.0" layoutY="240.0" prefHeight="24.0" prefWidth="241.0" promptText="Date de fin de réservation" />
    </children>
 </AnchorPane>
