--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Map.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Map.fxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -18,13 +17,10 @@
       </Text>
    </top>
    <center>
-      <VBox fx:id="mapContain" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-border-color: black; -fx-border-width: 3; -fx-border-radius: 30;" BorderPane.alignment="CENTER">
+      <Pane fx:id="mapPane" prefHeight="600.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
          </BorderPane.margin>
-         <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Ouah la belle carte c'est fou!" />
-         </children>
-      </VBox>
+      </Pane>
    </center>
 </BorderPane>
