--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Messagerie.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Messagerie.fxml
@@ -47,13 +47,18 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
                   </VBox>
-                  <VBox layoutY="84.0" prefHeight="506.0" prefWidth="285.0" spacing="20.0">
+                  <VBox layoutY="84.0" prefHeight="506.0" prefWidth="285.0" spacing="5.0">
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Listes de vos conversations:">
                            <font>
                               <Font name="Ubuntu" size="18.0" />
                            </font>
                         </Text>
+                        <Label fx:id="noConv" alignment="CENTER" prefHeight="18.0" prefWidth="278.0" text="Aucune Conversation" textAlignment="RIGHT">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
                         <ListView fx:id="listContact" prefHeight="512.0" prefWidth="263.0" />
                      </children>
                      <padding>
@@ -67,20 +72,29 @@
             </AnchorPane>
           <AnchorPane fx:id="conversationActive" minHeight="0.0" minWidth="0.0" prefHeight="518.0" prefWidth="569.0">
                <children>
-                  <VBox alignment="TOP_CENTER" layoutX="2.0" layoutY="3.0" prefHeight="568.0" prefWidth="666.0" spacing="10.0">
+                  <Label fx:id="noSelectConv" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="0.0" prefWidth="659.0" text="Aucune Conversation sélectionnée" textAlignment="CENTER">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <padding>
+                        <Insets top="80.0" />
+                     </padding>
+                  </Label>
+                  <VBox fx:id="convActive" alignment="TOP_CENTER" layoutX="2.0" layoutY="3.0" prefHeight="568.0" prefWidth="666.0" spacing="10.0">
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Conversation active:">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Text>
-                        <HBox prefHeight="38.0" prefWidth="626.0">
+                        <HBox prefHeight="38.0" prefWidth="626.0" spacing="240.0">
                            <children>
                               <Label fx:id="contactPseudoLabel" prefHeight="40.0" prefWidth="176.0" text="Nom du contact">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
                               </Label>
+                              <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#handleDeleteConversation" text="Supprimer la conversation" />
                            </children>
                            <VBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
