--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Map.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/Map.fxml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="681.0" prefWidth="983.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.MapController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="733.0" prefWidth="1124.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.MapController">
    <top>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Trouve des annonces autour de chez toi!" BorderPane.alignment="CENTER">
          <font>
@@ -21,6 +23,9 @@
          <BorderPane.margin>
             <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
          </BorderPane.margin>
+         <children>
+            <TableView fx:id="listOffers" layoutX="666.0" layoutY="99.0" prefHeight="358.0" prefWidth="401.0" />
+         </children>
       </Pane>
    </center>
 </BorderPane>
