--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/ServiceOffer.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/ServiceOffer.fxml
@@ -16,5 +16,6 @@
       <Button fx:id="ButtonCancel" layoutX="242.0" layoutY="307.0" mnemonicParsing="false" onAction="#cancel" text="Liste des offres" />
       <DatePicker fx:id="booking_begin" layoutX="35.0" layoutY="223.0" prefHeight="24.0" prefWidth="241.0" promptText="Date de début de réservation" />
       <DatePicker fx:id="booking_end" layoutX="326.0" layoutY="223.0" prefHeight="24.0" prefWidth="241.0" promptText="Date de fin de réservation" />
+      <Button fx:id="ButtonDelete" layoutX="236.0" layoutY="351.0" mnemonicParsing="false" onAction="#delete" text="Supprimer l'offre" />
    </children>
 </AnchorPane>
