--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/ServiceOffer.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/ServiceOffer.fxml
@@ -17,5 +17,6 @@
       <DatePicker fx:id="booking_begin" layoutX="35.0" layoutY="223.0" prefHeight="24.0" prefWidth="241.0" promptText="Date de début de réservation" />
       <DatePicker fx:id="booking_end" layoutX="326.0" layoutY="223.0" prefHeight="24.0" prefWidth="241.0" promptText="Date de fin de réservation" />
       <Button fx:id="ButtonDelete" layoutX="236.0" layoutY="351.0" mnemonicParsing="false" onAction="#delete" text="Supprimer l'offre" />
+      <Button fx:id="contactHelp" layoutX="231.0" layoutY="351.0" mnemonicParsing="false" onAction="#contactHelp" text="Signaler l'annonce" />
    </children>
 </AnchorPane>
