--- a/DirectDealing/src/main/resources/eu/telecomnancy/labfx/WelcomePage.fxml
+++ b/DirectDealing/src/main/resources/eu/telecomnancy/labfx/WelcomePage.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -12,23 +13,37 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="717.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.MainController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="546.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.MainController">
    <center>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
             <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
+                  <!-- Message Flash -->
+                  <HBox fx:id="flashMessageContainer" alignment="CENTER" maxHeight="50.0" maxWidth="600.0" prefHeight="44.0" prefWidth="530.0" spacing="10.0" style="-fx-background-radius: 20; -fx-border-radius: 20; -fx-background-radius: 50;" visible="false">
+                     <Label fx:id="flashMessageLabel" text="Message Flash ici">
+                        <font>
+                              <Font size="18.0" />
+                        </font>
+                     </Label>
+                     <Button onAction="#closeFlashMessage" text="X" />
+                     <padding>
+                        <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
+                     </padding>
+                  </HBox>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Bienvenue sur">
                      <font>
                         <Font name="Ubuntu" size="28.0" />
                      </font>
                      <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </VBox.margin></Text>
+                     </VBox.margin>
+                  </Text>
                   <ImageView fitHeight="182.0" fitWidth="524.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@images/logo_codingWeek.png" />
-                     </image></ImageView>
+                     </image>
+                  </ImageView>
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -71,7 +86,8 @@
                   <Button mnemonicParsing="false" onAction="#handleInscription" text="Inscrivez-vous">
                      <HBox.margin>
                         <Insets top="10.0" />
-                     </HBox.margin></Button>
+                     </HBox.margin>
+                  </Button>
                </children>
                <padding>
                   <Insets bottom="20.0" left="10.0" right="10.0" top="10.0" />
@@ -80,4 +96,5 @@
          </children>
       </VBox>
    </center>
+
 </BorderPane>
